fix: dropdown alignment and menu sizing

--- a/frontend/src/scss/theme/_dropdown.scss
+++ b/frontend/src/scss/theme/_dropdown.scss
@@ -1,9 +1,12 @@
 @use './../abstracts' as *;
-@use 'colors' as *;
+@use 'colors' as theme;
 
 $enable-caret: false;
-$dropdown-link-color: $body-color;
-$dropdown-link-hover-bg: $gray-300;
-$dropdown-item-padding-y: em(8);
-// $dropdown-border-color: $border-color;
-// $dropdown-border-width: $border-width;
+$dropdown-link-color: theme.$body-color;
+$dropdown-link-hover-bg: theme.$gray-300;
+$dropdown-item-padding-y: rem(8);
+$dropdown-border-color: $border-color;
+$dropdown-border-width: $border-width;
+$dropdown-item-padding-x: rem(8);
+$dropdown-item-padding-y: rem(10);
+$dropdown-padding-x: rem(8);
